# NewRustTemplate

./: .gitignore  Cargo.toml  pre-generate.rhai
.devcontainer/: devcontainer.json  onStart.sh
src/: init.rs  main.rs
