[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

{%- if use_mimalloc%}
[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "^0.1.48"
{% endif %}

[dependencies]
{%- if use_clap %}
clap = { version = "^4.5", features = ["derive"] }
{%- endif %}
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
eyre = { version="0.6" }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.dev.package.backtrace]
opt-level = 3
